--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,6 +8,7 @@
 --cortexto:#000000;
 --cor-clara-destaque:#DED6D6;
 --cor-azul-destaque:#648DE5;
+--cor-form:#ffffff33;
 
 }
 
@@ -146,3 +147,110 @@ body{
     width: 520px;
     height: 520px;
 }
+
+.container{
+    position: relative;
+    width: 400px;
+    height: 400px;
+    background: var(--cor-form);
+    border: 2px solid var(--cor-azul-destaque);
+    border-radius: 8px;
+    backdrop-filter: blur(20px);
+    box-shadow:  0 0 20px var(--cor-clara-destaque);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .form-box{
+    width: 100%;
+    padding: 40px;
+
+
+}
+
+.form-box h2{
+    font-size: 30px;
+    color: var(--corneutra);
+    text-align: center;
+}
+
+.input-box{
+    position: relative;
+    width: 100%;
+    height: 30px;
+    margin: 30px 0;
+
+}
+
+.input-box label{
+    top: 30%;
+    left: 5px;
+    transform: translateY(-50%);
+    color: var(--cor-azul-destaque);
+    font-size: 16px;
+    font-weight: bold;
+    pointer-events: none;
+}
+
+.input-box input{
+    width: 80%;
+    background:var(--corneutra);
+    border: 2px;
+    outline: var(--cor-azul-destaque);
+}
+
+.relembrar{
+    font-size: 17px;
+    color: var(--corneutra);
+    justify-content: space-between;
+}
+
+.relembrar label input{
+    margin-right: 3px;
+    accent-color: var(--cortexto);
+}
+
+.relembrar a{
+    color: var(--corneutra);
+    text-decoration: none;
+    font-size: 16px;
+}
+
+.relembrar a:hover{
+    transition: 0.5s;
+    color: var(--cor-azul-destaque);
+    text-decoration: underline;
+}
+
+.btn-loginbox{
+    background-color: var(--cor-azul-destaque);
+    color: var(--corneutra);
+    width: 100%;
+    font-size: 20px;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+    padding: 5px 0px;
+    margin-top: 12px;
+}
+
+.login-registro{
+    font-size: 15px;
+    color: var(--corneutra);
+    margin-top: 10px;
+
+}
+
+.login-registro .registro-link{
+    color: var(--corneutra);
+    text-decoration: none;
+}
+
+.login-registro .registro-link:hover{
+    color: var(--cor-azul-destaque);
+    text-decoration: underline;
+    transition: 0.5s;
+}
+
+
