--- a/css/estilo.css
+++ b/css/estilo.css
@@ -116,7 +116,7 @@ body{
 }
 
 .container-texto p{
-    width: 450px;
+    width: 350px;
     font-size: 16px;
     font-weight: bold;
     margin-top: 20px;
@@ -144,8 +144,8 @@ body{
 }
 
 .poster-lateral{
-    width: 520px;
-    height: 520px;
+    width: 500px;
+    height: 500px;
 }
 
 .container{
@@ -160,6 +160,18 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    display: none;
+    
+}
+
+.container-visivel{
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    
 }
 
 .container .form-box{
